set(YEAR 2023)
add_subdirectory(01)
add_subdirectory(02)
#add_subdirectory(03) - day3 is a WIP, never got it right
add_subdirectory(04)
add_subdirectory(05)
add_subdirectory(06)
ADD_SUBDIRECTORY(07)
ADD_SUBDIRECTORY(08)
add_subdirectory(09)
#add_subdirectory(11)
#add_subdirectory(12)
add_subdirectory(13)
add_subdirectory(15)
add_subdirectory(18)
add_subdirectory(19)
add_subdirectory(20)
add_subdirectory(21)
#add_subdirectory(22)
add_subdirectory(23)